--- a/.gitignore
+++ b/.gitignore
@@ -3,19 +3,19 @@
 # Get latest from https://github.com/github/gitignore/blob/main/Unity.gitignore
 #
 /AF Interview Project/[Ll]ibrary/
-/[Tt]emp/
-/[Oo]bj/
-/[Bb]uild/
-/[Bb]uilds/
-/[Ll]ogs/
-/[Uu]ser[Ss]ettings/
+/AF Interview Project/[Tt]emp/
+/AF Interview Project/[Oo]bj/
+/AF Interview Project/[Bb]uild/
+/AF Interview Project/[Bb]uilds/
+/AF Interview Project/[Ll]ogs/
+/AF Interview Project/[Uu]ser[Ss]ettings/
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
-/[Mm]emoryCaptures/
+/AF Interview Project/[Mm]emoryCaptures/
 
 # Recordings can get excessive in size
-/AF Interview Project//[Rr]ecordings/
+/AF Interview Project/[Rr]ecordings/
 
 # Uncomment this line if you wish to ignore the asset store tools plugin
 # /[Aa]ssets/AssetStoreTools*
